--- a/i18n/sv_SE.csv
+++ b/i18n/sv_SE.csv
@@ -156,4 +156,5 @@ Settings,Settings
 "Number of Products","Number of Products"
 "New Order Status","New Order Status"
 "Sort Order","Sort Order"
+"Show More","Visa Mer"
 Title,Title
