--- a/i18n/sv_SE.csv
+++ b/i18n/sv_SE.csv
@@ -98,7 +98,7 @@
 "Coupon code was canceled.","Coupon code was canceled."
 "We can't apply your coupon.","We can't apply your coupon."
 "We can't update your Country / postal code.","We can't update your Country / postal code."
-"Order redeived","Order redeived"
+"Order received","Order received"
 "We can't update your comment.","We can't update your comment."
 "Invalid Quote hash","Invalid Quote hash"
 "Found no svea order id.","Found no svea order id."
