--- a/i18n/sv_SE.csv
+++ b/i18n/sv_SE.csv
@@ -61,7 +61,7 @@
 "Shipping Method","Shipping Method"
 "Country","Country"
 "Postal code","Postal code"
-"Choose Delivery","Choose Delivery"
+"Choose Delivery","See Delivery Methods"
 "Item","Item"
 "Description","Description"
 "Quantity","Quantity"
@@ -79,7 +79,7 @@
 "Incl. Tax","Incl. Tax"
 "Subtotal","Subtotal"
 "Remove","Remove"
-"Order Comment (Optionally)","Order Comment (Optionally)"
+"Order Comment (Optionally)","Order Comment (Optional)"
 "Enter a comment for this order","Enter a comment for this order"
 "Save","Save"
 "Use a different payment method","Use a different payment method"
