add translation files

--- a/i18n/nb_NO.csv
+++ b/i18n/nb_NO.csv
@@ -1,3 +1,4 @@
+"Column1","Column2"
 "No country set, change to %1","No country set, change to %1"
 "Wrong country set %1, change to %2","Wrong country set %1, change to %2"
 "Svea checkout is not available for %1, country was changed to %2.","Svea checkout is not available for %1, country was changed to %2."
@@ -98,7 +99,7 @@
 "Coupon code was canceled.","Coupon code was canceled."
 "We can't apply your coupon.","We can't apply your coupon."
 "We can't update your Country / postal code.","We can't update your Country / postal code."
-"Order received","Order received"
+"Order redeived","Order redeived"
 "We can't update your comment.","We can't update your comment."
 "Invalid Quote hash","Invalid Quote hash"
 "Found no svea order id.","Found no svea order id."
@@ -134,7 +135,7 @@
 "Default Country","Default Country"
 "Only if multiple countries are allowed. If this is invalid, the first allowed country will be used","Only if multiple countries are allowed. If this is invalid, the first allowed country will be used"
 "Allowed Payment Countries","Allowed Payment Countries"
-"Assure that selected countries are in <strong>Allow Countries</strong> list (<em>System &raquo; Configuration &raquo; General &raquo; General</em>)","Assure that selected countries are in <strong>Allow Countries</strong> list (<em>System &raquo; Configuration &raquo; General &raquo; General</em>)"
+""Assure that selected countries are in <strong>Allow Countries</strong> list (<em>System &raquo"," Configuration &raquo"," General &raquo"," General</em>)"",""Assure that selected countries are in <strong>Allow Countries</strong> list (<em>System &raquo"," Configuration &raquo"," General &raquo"," General</em>)""
 "Capture/Refund payment","Capture/Refund payment"
 "If NO, no payment operations will be done (Capture/Refund/Void) on Invoice/Creditmemo/Order","If NO, no payment operations will be done (Capture/Refund/Void) on Invoice/Creditmemo/Order"
 "Can capture partial","Can capture partial"
