sv_SE.csv edited online with Bitbucket

--- a/i18n/sv_SE.csv
+++ b/i18n/sv_SE.csv
@@ -155,3 +155,9 @@ Number of Products,Antal av produkter
 New Order Status,Ny orderstatus
 Sort Order,Sort Order
 Title,Titel
+"Grand total","Totalsumman"
+"Show More","Visa mer"
+"Show Less","Visa mindre"
+"Remove","Ta bort"
+"Tax","Moms"
+"Shipping","Frakt"
