nb_NO.csv edited online with Bitbucket

--- a/i18n/nb_NO.csv
+++ b/i18n/nb_NO.csv
@@ -79,7 +79,7 @@
 "Excl. Tax","Eksl moms"
 "Incl. Tax","Ink moms"
 "Subtotal","Total"
-"Remove","Fjerne"
+"Remove","Fjern"
 "Order Comment (Optionally)","Order Comment (Optionally)"
 "Enter a comment for this order","legg til kommentar på ordre"
 "Save","Lagre"
@@ -119,7 +119,7 @@
 "Cannot initialize Svea Checkout (%1)","Kan ikke starte Svea Checkcout(%1)"
 "Svea Checkout","Svea Checkout"
 "Invoice Fee","Fakturagebyr"
-"Crosssell products","Krysssalg av varer"
+"Crosssell products","Krysssalg av tillbehør"
 "Date:,Date:","Dato:,. Dato:"
 "Total:,Total:","Totalt:, Totalt:"
 "You will be redirected to the Svea Checkout page.","Du blir sendt videre til Svea Checkout siden."
@@ -157,3 +157,5 @@
 "New Order Status","Ny ordrestatus"
 "Sort Order","Sortere ordre"
 "Title","Tittel"
+"Show More","Vis mer"
+"Show Less","Vis mindre"
