nb_NO.csv edited online with Bitbucket

--- a/i18n/nb_NO.csv
+++ b/i18n/nb_NO.csv
@@ -80,7 +80,7 @@
 "Incl. Tax","Ink moms"
 "Subtotal","Total"
 "Remove","Fjern"
-"Order Comment (Optionally)","Order Comment (Optionally)"
+"Order Comment (Optionally)","Kommentar"
 "Enter a comment for this order","legg til kommentar på ordre"
 "Save","Lagre"
 "Use a different payment method","Velg annen betalingsmåte"
