--- a/i18n/fi_FI.csv
+++ b/i18n/fi_FI.csv
@@ -1,131 +1,131 @@
 "Column1","Column2"
-"No country set, change to %1","Maakoodia ei m‰‰ritetty, vaihda 1%"
-"Wrong country set %1, change to %2","V‰‰r‰ maakoodi asetettu, vaihda 2% "
+"No country set, change to %1","Maakoodia ei m√§√§ritetty, vaihda 1%"
+"Wrong country set %1, change to %2","V√§√§r√§ maakoodi asetettu, vaihda 2% "
 "Svea checkout is not available for %1, country was changed to %2.","Svea Checkout ei mahdollinen %1, maakoodi vaihdettu 2%"
 "Checkout was reloaded.","Checkout ladattiin uudelleen"
-"The Svea Checkout is not enabled, please use an alternative checkout method.","Svea Checkout ei ole k‰ytˆss‰,ole hyv‰ ja k‰yt‰ muuta maksutapaa."
-"The Svea Checkout is NOT available (no allowed country), please use an alternative checkout method.","Svea Checkout ei ole k‰ytˆss‰ t‰ss‰ maassa, ole hyv‰ ja valitse toinen maksutapa."
-"There are no items in your cart.","Ostoskori on tyhj‰"
-"The cart contains errors.","Ostoskorissa on virheit‰."
-"Subtotal must exceed minimum order amount.","Yhteissumman pit‰‰ ylitt‰‰ minimiostossumma"
+"The Svea Checkout is not enabled, please use an alternative checkout method.","Svea Checkout ei ole k√§yt√∂ss√§,ole hyv√§ ja k√§yt√§ muuta maksutapaa."
+"The Svea Checkout is NOT available (no allowed country), please use an alternative checkout method.","Svea Checkout ei ole k√§yt√∂ss√§ t√§ss√§ maassa, ole hyv√§ ja valitse toinen maksutapa."
+"There are no items in your cart.","Ostoskori on tyhj√§"
+"The cart contains errors.","Ostoskorissa on virheit√§."
+"Subtotal must exceed minimum order amount.","Yhteissumman pit√§√§ ylitt√§√§ minimiostossumma"
 "Country is not set.","Maakoodia ei asetettu"
-"This currency is not available, please use an alternative checkout.","T‰m‰ valuutta ei ole k‰ytˆss‰, ole hyv‰ ja valitse toinen maksutapa."
+"This currency is not available, please use an alternative checkout.","T√§m√§ valuutta ei ole k√§yt√∂ss√§, ole hyv√§ ja valitse toinen maksutapa."
 "Currency was changed to %1.","Valuutta on vaihdettu "
 "Invalid country (%1)","Maakoodi virheellinen"
 "Order %1, cannot create customer [%2]: %3","Tilaus %1, ei voitu luoda asiakasta "
 "Authorize action is not available.","Toiminto ei mahdollinen."
 "Authorized amount of %1.","Varmennettu summa %1"
-"Capture action is not available.","Toiminto ei k‰ytˆss‰"
+"Capture action is not available.","Toiminto ei k√§yt√∂ss√§"
 "Could not Capture order. %1","Toimitoa ei voi suorittaa. %1"
 "Refund action is not available.","Hyvitys ei mahdollinen"
-"Could not Refund Invoice. %1","Laskua ei voi hyvitt‰‰"
+"Could not Refund Invoice. %1","Laskua ei voi hyvitt√§√§"
 "Void/Cancel action is not available.","Peruutus ei mahdollinen"
 "Could not cancel order. %1","Tilausta ei voitu perua. %1"
 "Detach is not available.","Irroitus ei mahdollista."
 "Could not save the push: %1","Toimintoa ei voi tallentaa. %1"
 "The push doesn't exist.","Toimintoa ei olemassa."
-"Empty Cart","Ostoskori on tyhj‰"
-"Cart has errors, cannot checkout.","Ostoskorissa on virheit‰, ostosta ei voi tehd‰"
-"You need an svea payment ID to void.","Tarvitset Svea maksutapa ID:n hyvitt‰‰ksesi"
+"Empty Cart","Ostoskori on tyhj√§"
+"Cart has errors, cannot checkout.","Ostoskorissa on virheit√§, ostosta ei voi tehd√§"
+"You need an svea payment ID to void.","Tarvitset Svea maksutapa ID:n hyvitt√§√§ksesi"
 "Cannot capture online, no invoice set","Ei voi tallentaa, laskua ei muodostettu."
 "Could not load svea order","Svea tilausta ei voitu ladata"
-"Could not map order row numbers, so we cannot perform this action. Please do it manually","Tapahtumaa ei voida suorittaa, ole hyv‰ ja tee tapahtuma manuaalisesti."
+"Could not map order row numbers, so we cannot perform this action. Please do it manually","Tapahtumaa ei voida suorittaa, ole hyv√§ ja tee tapahtuma manuaalisesti."
 "You need an svea payment ID to capture.","Tarvitset Svea  tilausnumeron tallentaaksesi"
-"This delivery is still in progress. Try again soon.","T‰m‰ tilaus on k‰sittelyss‰. Yrit‰ myˆhemmin uudelleen."
-"Found no deliveries to refund on. Please refund offline, and do the rest manually in Svea.","Ei lˆytynyt hyvitett‰vi‰ toimituksia. Ole hyv‰ ja hyvit‰ manuaalisesti loppuun Svealle"
-"Can't refund this invoice. Please refund offline, and do the rest manually in Svea.","Laskua ei voida hyvitt‰‰. Ole hyv‰ ja hyvit‰ offline ja tee hyvitys manuaalisesti Svean kautta."
-"This is a partial credit memo. You have to add an adjustment fee that is the same amount as the svea invoice fee.","T‰m‰ on osahyvityksen muistio. Sinun tulee lis‰t‰ kulun korjaus Svean laskutuslis‰n summalle."
-"You need an svea ID and Svea Delivery ID to refund.","Hvyityst‰ varten tarvitset Svea tilausnumeron"
+"This delivery is still in progress. Try again soon.","T√§m√§ tilaus on k√§sittelyss√§. Yrit√§ my√∂hemmin uudelleen."
+"Found no deliveries to refund on. Please refund offline, and do the rest manually in Svea.","Ei l√∂ytynyt hyvitett√§vi√§ toimituksia. Ole hyv√§ ja hyvit√§ manuaalisesti loppuun Svealle"
+"Can't refund this invoice. Please refund offline, and do the rest manually in Svea.","Laskua ei voida hyvitt√§√§. Ole hyv√§ ja hyvit√§ offline ja tee hyvitys manuaalisesti Svean kautta."
+"This is a partial credit memo. You have to add an adjustment fee that is the same amount as the svea invoice fee.","T√§m√§ on osahyvityksen muistio. Sinun tulee lis√§t√§ kulun korjaus Svean laskutuslis√§n summalle."
+"You need an svea ID and Svea Delivery ID to refund.","Hvyityst√§ varten tarvitset Svea tilausnumeron"
 "Shipping Fee (%1)","Toimitusmaksu (%1)"
 "Discount (%1)","Alennus (%1)"
-"The grand total price does not match the price being sent to Svea. Please contact an admin or use another checkout method.","Loppusumma ei vastaa hintaa joka on ilmoitettu Svealle. Ole hyv‰ ja ota yhteytt‰ tukeen tai vaihda maksutapaa."
+"The grand total price does not match the price being sent to Svea. Please contact an admin or use another checkout method.","Loppusumma ei vastaa hintaa joka on ilmoitettu Svealle. Ole hyv√§ ja ota yhteytt√§ tukeen tai vaihda maksutapaa."
 "Svea Order ID","Svea tilausnumero"
 "Svea Checkout Order ID","Svea Checkout tilausnumero "
 "Svea Checkout Order ID: %1","Svea Checkout tilausnumero: %1"
 "Order number:","Tilausnumero:"
 "#: %1","#: %1"
-"Date","P‰iv‰m‰‰r‰"
+"Date","P√§iv√§m√§√§r√§"
 "Order Details","Tilauksen tiedot"
 "Product","Tuote"
 "Discount:","Alennus:"
 "Shipping","Toimitus"
 "Payment Method:","Maksutapa"
-"Total:","Yhteens‰:"
+"Total:","Yhteens√§:"
 "Continue Shopping","Jatka ostoksia"
 "Cross-sell products","Rajoitetut tuotteet"
-"Add to Cart","Lis‰‰ ostoskoriin"
+"Add to Cart","Lis√§√§ ostoskoriin"
 "In stock","Varastossa"
 "Out of stock","Loppunut varastosta"
-"Sign Up for Our Newsletter","Rekisterˆidy uutiskirjeen tilaajaksi"
+"Sign Up for Our Newsletter","Rekister√∂idy uutiskirjeen tilaajaksi"
 "Checkout","Kassa"
-"Sorry, no quotes are available for this order right now.","Pahoittelut, t‰lle tilaukselle ei t‰ll‰ hetkell‰ ole tarjouksia saatavilla."
+"Sorry, no quotes are available for this order right now.","Pahoittelut, t√§lle tilaukselle ei t√§ll√§ hetkell√§ ole tarjouksia saatavilla."
 "Shipping Method","Toimitustapa"
 "Country","Maa"
 "Postal code","Postinumero"
 "Choose Delivery","Valitse toimitustapa"
 "Item","Tuote"
 "Description","Kuvaus"
-"Quantity","M‰‰r‰"
-"Use coupon","K‰yt‰ kuponki"
+"Quantity","M√§√§r√§"
+"Use coupon","K√§yt√§ kuponki"
 "Do you have a coupon code?","Onko sinulla alennuskoodi?"
-"Click here to enter code","Paina t‰st‰ syˆtt‰‰ksesi koodin"
+"Click here to enter code","Paina t√§st√§ sy√∂tt√§√§ksesi koodin"
 "Coupon Code","Kuponki koodi"
-"Enter discount code","Syˆt‰ alennuskoodi"
-"Apply Discount","K‰yt‰ alennus"
+"Enter discount code","Sy√∂t√§ alennuskoodi"
+"Apply Discount","K√§yt√§ alennus"
 "Cancel Coupon","Peruuta koodi"
 "Product Name","Tuotenimi"
 "Price","Hinta"
-"Qty","M‰‰r‰"
+"Qty","M√§√§r√§"
 "Excl. Tax","Ei sis. Alv"
 "Incl. Tax","Sis. Alv"
 "Subtotal","Yhteissumma"
-"Remove","Siirr‰"
+"Remove","Siirr√§"
 "Order Comment (Optionally)","Tilaus kommentti ( vapaaehtoinen)"
-"Enter a comment for this order","Syˆt‰ lis‰tietoa tilaukselle"
+"Enter a comment for this order","Sy√∂t√§ lis√§tietoa tilaukselle"
 "Save","Tallenna"
-"Use a different payment method","K‰yt‰ toista maksutapaa"
+"Use a different payment method","K√§yt√§ toista maksutapaa"
 "Svea Checkout Order ID ","Svea Checkout tilausnumero"
-"Finish purchase","P‰‰t‰ ostos"
-"Submitting order information...","Tilaustietojen l‰hett‰minenÖ"
-"Are you sure you want to remove this?","Oletko varma ett‰ haluat poistaa t‰m‰n?"
-"Sorry, something went wrong. Please try again (reload this page)","Pahoittelut, jotain meni vikaan. Kokeile myˆhemmin uudelleen. ( lataa sivu uudelleen)"
-"Sorry, something went wrong. Please try again later.","Pahoittelut, jotain meni vikaan. Kokeile myˆhemmin uudelleen."
-"The cart was updated (from another location), reloading the checkout, please wait...","Ostoskori p‰ivitettiin.Ole hyv‰ ja odota kun tietoja p‰ivitet‰‰n... "
-"The requested changes were not applied. The cart was updated (from another location), please review the cart.","Pyydettyj‰ muutoksia ei tehty. Ostoskoria p‰ivitettiin, tarkista muutokset."
-"We can't update your subscription.","Emme voi p‰ivitt‰‰ tilaustasi."
+"Finish purchase","P√§√§t√§ ostos"
+"Submitting order information...","Tilaustietojen l√§hett√§minen"
+"Are you sure you want to remove this?","Oletko varma ett√§ haluat poistaa t√§m√§n?"
+"Sorry, something went wrong. Please try again (reload this page)","Pahoittelut, jotain meni vikaan. Kokeile my√∂hemmin uudelleen. ( lataa sivu uudelleen)"
+"Sorry, something went wrong. Please try again later.","Pahoittelut, jotain meni vikaan. Kokeile my√∂hemmin uudelleen."
+"The cart was updated (from another location), reloading the checkout, please wait...","Ostoskori p√§ivitettiin.Ole hyv√§ ja odota kun tietoja p√§ivitet√§√§n... "
+"The requested changes were not applied. The cart was updated (from another location), please review the cart.","Pyydettyj√§ muutoksia ei tehty. Ostoskoria p√§ivitettiin, tarkista muutokset."
+"We can't update your subscription.","Emme voi p√§ivitt√§√§ tilaustasi."
 "Coupon code is not valid (or missing)","Kuponkikoodia ei tunnistettu"
-"Coupon code %1 was applied.","Kuponki koodi k‰ytetty"
-"Coupon code %1 is not valid,","Kuponki koodi ei k‰ytˆss‰"
+"Coupon code %1 was applied.","Kuponki koodi k√§ytetty"
+"Coupon code %1 is not valid,","Kuponki koodi ei k√§yt√∂ss√§"
 "Coupon code was canceled.","Alennuskuponki peruutettiin."
-"We can't apply your coupon.","Kuponkia ei voi k‰ytt‰‰"
-"We can't update your Country / postal code.","Emme voi p‰ivitt‰‰ maa/ postinumerotietoa"
+"We can't apply your coupon.","Kuponkia ei voi k√§ytt√§√§"
+"We can't update your Country / postal code.","Emme voi p√§ivitt√§√§ maa/ postinumerotietoa"
 "Order redeived","Tilaus vastaanotettu"
-"We can't update your comment.","Emme voi p‰ivitt‰‰ kommenttiasi"
+"We can't update your comment.","Emme voi p√§ivitt√§√§ kommenttiasi"
 "Invalid Quote hash","Invalid Quote hash"
-"Found no svea order id.","Svea tilausnumeroa ei lˆydy"
-"The Svea Order ID is invalid.","Svea tilausnumero on v‰‰r‰"
-"Found no Svea Order for this session. Please refresh the site or clear your cookies.","T‰lle istunnolle ei lˆytynyt "
-"Something went wrong when we tried to retrieve the order from Svea. Please try again or contact an admin.","Tilaustietoja Svealta haettaessa jotain meni vikaan. Yrit‰ uudelleen tai ota yhteytt‰ tukeen."
-"Something went wrong... Contact site admin.","Jotain meni vikaan..Ota yhteytt‰ tukeen."
-"Found no quote object for this Svea order ID.","T‰lle tilaukselle ei lˆytynyt tietoja."
-"Please add shipping information.","Lis‰‰ toimitustietoja."
-"The country or postal code doesn't match with the one you entered earlier. Please re-enter the new postal code for the shipping above.","Maakoodi tai postinumero ei t‰sm‰‰ aiemmin syˆtt‰m‰‰si. Ole hyv‰ ja syˆt‰ tiedot tilaukselle uudelleen. "
+"Found no svea order id.","Svea tilausnumeroa ei l√∂ydy"
+"The Svea Order ID is invalid.","Svea tilausnumero on v√§√§r√§"
+"Found no Svea Order for this session. Please refresh the site or clear your cookies.","T√§lle istunnolle ei l√∂ytynyt "
+"Something went wrong when we tried to retrieve the order from Svea. Please try again or contact an admin.","Tilaustietoja Svealta haettaessa jotain meni vikaan. Yrit√§ uudelleen tai ota yhteytt√§ tukeen."
+"Something went wrong... Contact site admin.","Jotain meni vikaan..Ota yhteytt√§ tukeen."
+"Found no quote object for this Svea order ID.","T√§lle tilaukselle ei l√∂ytynyt tietoja."
+"Please add shipping information.","Lis√§√§ toimitustietoja."
+"The country or postal code doesn't match with the one you entered earlier. Please re-enter the new postal code for the shipping above.","Maakoodi tai postinumero ei t√§sm√§√§ aiemmin sy√∂tt√§m√§√§si. Ole hyv√§ ja sy√∂t√§ tiedot tilaukselle uudelleen. "
 "Please choose a shipping method.","Valitse toimitustapa"
 "Could not place the order.","Tilausta ei voitu luoda"
-"We can't update shipping method.","Emme voi p‰ivitt‰‰ toimitustapaa"
-"Order id missing","Tilausnumeroa ei lˆydy"
-"An error occurred...","VirheÖ"
-"Cannot update checkout (%1)","Kassaa ei voi p‰ivitt‰‰ (%1)"
+"We can't update shipping method.","Emme voi p√§ivitt√§√§ toimitustapaa"
+"Order id missing","Tilausnumeroa ei l√∂ydy"
+"An error occurred...","Virhe"
+"Cannot update checkout (%1)","Kassaa ei voi p√§ivitt√§√§ (%1)"
 "Cannot initialize Svea Checkout (%1)","Ei voida alustaa Svea Checkout:a (%1)"
 "Svea Checkout","Svea Checkout"
-"Invoice Fee","Laskutuslis‰"
+"Invoice Fee","Laskutuslis√§"
 "Crosssell products","Rajoitetut tuotteet"
-"Date:,Date:","P‰iv‰m‰‰r‰:,P‰iv‰m‰‰r‰:"
-"Total:,Total:","Yhteens‰:,Yhteens‰:"
+"Date:,Date:","P√§iv√§m√§√§r√§:,P√§iv√§m√§√§r√§:"
+"Total:,Total:","Yhteens√§:,Yhteens√§:"
 "You will be redirected to the Svea Checkout page.","Sinut uudelleenohjataan Svea Checkout sivulle"
 "Svea","Svea"
 "Connection","Yhteys"
-"Enabled,Enabled","k‰ytˆss‰, k‰ytˆss‰"
+"Enabled,Enabled","k√§yt√∂ss√§, k√§yt√∂ss√§"
 "Testmode","Testiversio"
 "Merchant ID","Kauppiastunnus"
 "Merchant ID, you will get this from Svea.","Kauppiastunnus jonka saat Svealta"
@@ -133,27 +133,27 @@
 "The shared secret, you will get this from Svea.","Jaettu avain jonka saat Svealta"
 "Settings,Settings","Asetukset, asetukset"
 "Default Country","Oletus maa"
-"Only if multiple countries are allowed. If this is invalid, the first allowed country will be used","Vain mik‰li useampi maa on sallittu. Jos t‰m‰ on virheellinen, ensimm‰inen mahdollinen maakoodi k‰ytˆss‰."
+"Only if multiple countries are allowed. If this is invalid, the first allowed country will be used","Vain mik√§li useampi maa on sallittu. Jos t√§m√§ on virheellinen, ensimm√§inen mahdollinen maakoodi k√§yt√∂ss√§."
 "Allowed Payment Countries","Maksuissa sallitut maat"
-""Assure that selected countries are in <strong>Allow Countries</strong> list (<em>System &raquo"," Configuration &raquo"," General &raquo"," General</em>)"",""Varmista ett‰ valitut maat ovat <strong>Allow Countries</strong> list (<em>System &raquo"," Configuration &raquo"," General &raquo"," General</em>)""
-"Capture/Refund payment","Hyvit‰ maksu"
-"If NO, no payment operations will be done (Capture/Refund/Void) on Invoice/Creditmemo/Order","Jos ei, toimintoa ei voi suorittaa ( hyvitys/mit‰tˆinti) laskulle/ er‰maksulle."
+""Assure that selected countries are in <strong>Allow Countries</strong> list (<em>System &raquo"," Configuration &raquo"," General &raquo"," General</em>)"",""Varmista ett√§ valitut maat ovat <strong>Allow Countries</strong> list (<em>System &raquo"," Configuration &raquo"," General &raquo"," General</em>)""
+"Capture/Refund payment","Hyvit√§ maksu"
+"If NO, no payment operations will be done (Capture/Refund/Void) on Invoice/Creditmemo/Order","Jos ei, toimintoa ei voi suorittaa ( hyvitys/mit√§t√∂inti) laskulle/ er√§maksulle."
 "Can capture partial","Voi valita osittain"
-"If NO, you cannot make partial invoices/refunds","Jos ei, et voi tehd‰ osittaista hyvityst‰"
+"If NO, you cannot make partial invoices/refunds","Jos ei, et voi tehd√§ osittaista hyvityst√§"
 "Subscribe Newsletter Checked by default","Uutiskirjeen tilaus automaattisesti oletuksena"
-"Register Guest Customers","Rekisterˆi k‰ytt‰j‰"
+"Register Guest Customers","Rekister√∂i k√§ytt√§j√§"
 "Url for Terms page","Url toimitusehtoihin"
 "Replace checkout url with Svea Checkout","Korvaa kassan url Svea Checkoutilla"
 "Layout options","Asettelu vaihtoehdot"
-"Display Newsletter checkbox","N‰yt‰ uutiskirjeen tilausvalinta"
-"Display Discount Form","N‰yt‰ alennus"
-"Display Comment","N‰yt‰ kommentti"
-"Display link to a different payment method","N‰yt‰ linkki vaihtoehtoiseen maksutapaan"
-"Display Additional block","N‰yt‰ vaihtoehtoinen valinta"
-"Additional block Content","Vaihtoehtoisen valinnan sis‰ltˆ"
+"Display Newsletter checkbox","N√§yt√§ uutiskirjeen tilausvalinta"
+"Display Discount Form","N√§yt√§ alennus"
+"Display Comment","N√§yt√§ kommentti"
+"Display link to a different payment method","N√§yt√§ linkki vaihtoehtoiseen maksutapaan"
+"Display Additional block","N√§yt√§ vaihtoehtoinen valinta"
+"Additional block Content","Vaihtoehtoisen valinnan sis√§lt√∂"
 "Crosssell Products","Rajoitetut tuotteet"
-"Display Crosssell Products","N‰yt‰ rajoitetut tuotteet"
-"Number of Products","Tuotteiden m‰‰r‰"
+"Display Crosssell Products","N√§yt√§ rajoitetut tuotteet"
+"Number of Products","Tuotteiden m√§√§r√§"
 "New Order Status","Uuden tilauksen status"
 "Sort Order","Lajittele tilaukset"
 "Title","Otsikko"
